# phoenix

./: .gitignore  .gitmodules  CMakeLists.txt  README.html  README.md  desktop.ini  note.txt  release.json  tesk.md
Licence/: Privacy.md  about-us.md  (+1 more)
gptnerd_backend/: CMakeLists.txt  common.cpp  llamamodel.cpp  llmodel_c.cpp  llmodel_c.h
gptnerd_backend/llama.cpp/: CMakeLists.txt
phoenix_qt/: .qmlls.ini  AnimationText.qml  AppBody.qml  AppFooter.qml  AppMenu.qml  AppMenuDesktop.qml  ApplicationSettingsPage.qml  CMakeLists.txt  ChatPage.qml  Constants.qml  CustomDot.qml  DashbordItem.qml  DownloadModelButton.qml  HomePage.qml  InputPromptBox.qml  Main.qml  ModelDialog.qml  ModelItem.qml  ModelsPage.qml  MyButton.qml  MyChatItem.qml  MyComboBox.qml  MyIcon.qml  MyMenuButtonItem.qml  MyMenuItem.qml  MyMenuSettings.qml  MyMessage.qml  MyPromptResponse.qml  MySlider.qml  MySwitch.qml  Notification.qml  OnlineModelItem.qml  SettingsDialog.qml  SettingsSliderItem.qml  SettingsSwitchItem.qml  SpeedDisplay.qml  abstractchatprovider.cpp  abstractchatprovider.h  chat.cpp  chat.h  (+35 more)
phoenix_qt/chat/: ChatView.qml
phoenix_qt/chat/components/: ChatBody.qml  ChatHeader.qml
phoenix_qt/chat/components/chat/: InputPrompt.qml
phoenix_qt/chat/components/history/: HistoryBody.qml  HistoryDelegate.qml  HistoryHeader.qml  HistoryList.qml
phoenix_qt/chat/components/model/: ModelButton.qml  ModelDialog.qml
phoenix_qt/chat/components/model_settings/: ModelSettingsHeader.qml
phoenix_qt/component_library/button/: MyButton.qml  MyIcon.qml  MySlider.qml  SearchButton.qml
phoenix_qt/component_library/style/: Colors.qml  RoleEnum.qml  qmldir
phoenix_qt/core/: database.cpp  database.h  main.cpp  speechtotext.cpp  systemmonitor.cpp  systemmonitor.h
phoenix_qt/core/chat/: conversation.cpp  conversationlist.cpp  conversationlist.h  conversationlistfilter.h  message.cpp
phoenix_qt/core/conversation/: chat.cpp  chat.h  conversation.cpp  conversation.h  conversationlist.cpp  conversationlist.h  conversationlistfilter.cpp  conversationlistfilter.h
phoenix_qt/core/conversation/chat/: message.cpp  message.h  messagelist.cpp  messagelist.h  modelsettings.cpp  modelsettings.h  responselist.cpp  responselist.h
phoenix_qt/core/conversation/provider/: offlineprovider.cpp  offlineprovider.h  onlineprovider.cpp  onlineprovider.h  provider.cpp  provider.h
phoenix_qt/core/model/: BackendType.h  company.cpp  company.h  companylist.cpp  companylist.h  companylistfilter.cpp  companylistfilter.h  model.cpp  model.h
phoenix_qt/core/model/file/: company.json  mistral_models.json  offline_models.json  openai_models.json
phoenix_qt/core/model/offline/: download.cpp  download.h  downloadmodel.cpp  downloadmodel.h  offlinemodel.cpp  offlinemodel.h  offlinemodellist.cpp  offlinemodellist.h  offlinemodellistfilter.cpp  offlinemodellistfilter.h
phoenix_qt/core/model/online/: onlinemodel.cpp  onlinemodel.h  onlinemodellist.cpp  onlinemodellist.h  onlinemodellistfilter.cpp  onlinemodellistfilter.h
phoenix_qt/core/providers/: providers.json  providers.py  providers_test.py
phoenix_qt/dep/file/: company.json  mistral_models.json  offline_models.json  openai_models.json
phoenix_qt/dep/onlineProvider/: main_provider.spec
phoenix_qt/home/: HomeView.qml
phoenix_qt/home/Components/: FeatureDelegate.qml  FeatureList.qml  Header.qml
phoenix_qt/home/components/: HomeHeader.qml
phoenix_qt/media/: media.qrc
phoenix_qt/menu/: AppMenu.qml  MyMenuItem.qml
phoenix_qt/model/: ModelsView.qml
phoenix_qt/model/components/: ModelHeader.qml
phoenix_qt/model/components/offline/: OfflineDelegate.qml  OfflineHeader.qml  OfflineList.qml  OfflineModelView.qml
phoenix_qt/plugins/: CMakeLists.txt
phoenix_qt/plugins/core/: CMakeLists.txt  abstractprovider.cpp  abstractprovider.h  pluginbase.cpp  pluginbase.h
phoenix_qt/plugins/offlinemodels/: CMakeLists.txt  OfflineModelsPlugin.json  offlinemodel.cpp  offlinemodel.h  offlinemodelsplugin.cpp  offlinemodelsplugin.h  openaiplugin.cpp  openaiplugin.h
phoenix_qt/plugins/onlineproviders/: CMakeLists.txt  onlineprovidersplugin.cpp  onlineprovidersplugin.h  openaiprovider.cpp  openaiprovider.h
phoenix_qt/providers/: abstractprovider.cpp  abstractprovider.h  nerdtoken.cpp  nerdtoken.h  openai.cpp  openai.h
phoenix_qt/style/: TabBar.qml  TabButton.qml  Theme.qml  qmldir
phoenix_qt/view/: AppBody.qml  AppFooter.qml  AppMenu.qml  AppMenuAplication.qml  AppMenuDesktop.qml  AppMenuDrawer.qml  Main.qml  SettingsDialog.qml
phoenix_qt/view/chat/: ChatView.qml
phoenix_qt/view/component_footer/: Downloading.qml  SystemMonitoring.qml
phoenix_qt/view/home/: HomeView.qml
phoenix_qt/view/menu/: MyMenuApp.qml
phoenix_qt/view/model/: ModelsView.qml
phoenix_qt/view/settings/: SettingsBody.qml  SettingsHeader.qml  SettingsMenu.qml  SettingsMenuDrawer.qml
phoenix_qt/workflow/: BlockBackground.qml  BlockEditorPage.qml  BlockHeader.qml  SimpleRelation.qml  SimpleRelationHandle.qml  WorkFlowRunnerPage.qml  WorkFlowsPage.qml  WorkFlowsPartPage.qml  abstractrelation.cpp  abstractrelation.h  abstracttool.cpp  abstracttool.h  block.cpp  block.h  curvedrelation.cpp  curvedrelation.h  directrelation.cpp  directrelation.h  relationhandle.cpp  relationhandle.h  relationtool.cpp  relationtool.h  selecttool.cpp  selecttool.h  workfloweditorarea.cpp  workfloweditorarea.h  workflowrunner.cpp  workflowrunner.h  workflowstep.cpp  workflowstep.h  workflowstepfield.cpp  workflowstepfield.h  workflowtemplatesstorage.cpp  workflowtemplatesstorage.h
phoenix_qt/workflow/blocks/: AbstractBlock.qml  AstraDBBlock.qml  ChatInputBlock.qml  ChatOutputBlock.qml  NoteBlock.qml  OpenAIEmbeddings.qml  ParseDataBlock.qml  PromptBlock.qml  chatinputblock.cpp  chatinputblock.h  openaistep.cpp  openaistep.h  outputstep.cpp  outputstep.h
phoenix_qt/workflow/commands/: addblockcommand.cpp  addblockcommand.h  addrelationcommand.cpp  addrelationcommand.h
phoenix_qt/workflow/fields/: StringInput.qml  StringOutput.qml
phoenix_qt/workflow/form/: TextFieldInput.qml
src/: CMakeLists.txt  chat.cpp  header.h
(+532 files in other folders)
